--- a/wiki/Socket.wiki
+++ b/wiki/Socket.wiki
@@ -317,7 +317,7 @@ public function isClient():Boolean
 Indicates if the socket is a TCP client.
 
 *note:*<br>
-To be a "client" the socket need to be of the Stream type<br>
+To be a "client" the socket need to be of the *Stream* type<br>
 and of the `connected` state.
 
 *since:* 0.3.0
@@ -330,7 +330,7 @@ public function isServer():Boolean
 Indicates if the socket is a TCP server.
 
 *note:*<br>
-To be a "client" the socket need to be of the Stream type<br>
+To be a "server" the socket need to be of the *Stream* type<br>
 and of the `bound` and `listening` state.
 
 *since:* 0.3.0
@@ -356,6 +356,7 @@ import C.socket.*;
 var udp:Socket = new Socket( AF_INET, SOCK_DGRAM, IPPROTO_UDP );
 }}}
 
+When a socket is destroyed it calls the the `onDestruct()` function.
 
 *since:* 0.3.0
 
@@ -364,6 +365,37 @@ var udp:Socket = new Socket( AF_INET, SOCK_DGRAM, IPPROTO_UDP );
 {{{
 public function connect( host:String, port:int ):void
 }}}
+Connect a socket.
+
+*note:*<br>
+Calls the `onConnect()` function (see [#Callbacks Callbacks] section).<br>
+<br>
+
+*since:* 0.3.0
+
+
+== close ==
+{{{
+public function close():void
+}}}
+Close a socket.
+
+*note:*<br>
+Calls the `onDisconnect()` function (see [#Callbacks Callbacks] section).<br>
+<br>
+
+*since:* 0.3.0
+
+
+== send ==
+{{{
+public function send( data:String, flags:int = 0 ):void
+}}}
+Send a string message on a connected socket.
+
+*note:*<br>
+Calls the `onSend()` function (see [#Callbacks Callbacks] section).<br>
+<br>
 
 *since:* 0.3.0
 
