--- a/wiki/Socket.wiki
+++ b/wiki/Socket.wiki
@@ -396,8 +396,136 @@ Send a string message on a connected socket.
 *note:*<br>
 Calls the `onSend()` function (see [#Callbacks Callbacks] section).<br>
 <br>
+Internally we loop trough the `data.length` to be sure the full data is sent, like a `sendAll()`.
 
 *since:* 0.3.0
+
+
+== sendBinary ==
+{{{
+public function sendBinary( data:ByteArray, flags:int = 0 ):void
+}}}
+Send a binary message on a connected socket.
+
+*note:*<br>
+Calls the `onSend()` function (see [#Callbacks Callbacks] section).<br>
+<br>
+Internally we loop trough the `data.length` to be sure the full data is sent, like a `sendAll()`.
+
+*since:* 0.3.0
+
+
+== sendTo ==
+{{{
+public function sendTo( host:String, port:int, data:String, flags:int = 0 ):void
+}}}
+Send a string message on a socket.
+
+*note:*<br>
+Calls the `onSend()` function (see [#Callbacks Callbacks] section).<br>
+<br>
+The full data is sent in one packet, nothing guarantee that all the data is transfered.
+
+*since:* 0.3.0
+
+
+== sendBinaryTo ==
+{{{
+public function sendBinaryTo( host:String, port:int, data:ByteArray, flags:int = 0 ):void
+}}}
+Send a binary message on a socket.
+
+*note:*<br>
+Calls the `onSend()` function (see [#Callbacks Callbacks] section).<br>
+<br>
+The full data is sent in one packet, nothing guarantee that all the data is transfered.
+
+*since:* 0.3.0
+
+
+== receive ==
+{{{
+public function receive( buffer:uint = 1024, flags:int = 0 ):String
+}}}
+Receive part of a string message from a connected socket.
+
+*note:*<br>
+Calls the `onReceive()` function (see [#Callbacks Callbacks] section).<br>
+<br>
+The data is received fragmented by the size of the `buffer`.
+
+*since:* 0.3.0
+
+
+== receiveAll ==
+{{{
+public function receiveAll( buffer:uint = 1024, flags:int = 0 ):String
+}}}
+Receive all of a string message from a connected socket.
+
+*note:*<br>
+Calls the `onReceiveAll()` function (see [#Callbacks Callbacks] section).<br>
+<br>
+The method loop till all the fragments are received.
+
+*since:* 0.3.0
+
+
+== receiveBinary ==
+{{{
+public function receiveBinary( buffer:uint = 1024, flags:int = 0 ):ByteArray
+}}}
+Receive part of a binary message from a connected socket.
+
+*note:*<br>
+Calls the `onReceive()` function (see [#Callbacks Callbacks] section).<br>
+<br>
+The data is received fragmented by the size of the `buffer`.
+
+*since:* 0.3.0
+
+
+== receiveBinaryAll ==
+{{{
+public function receiveBinaryAll( buffer:uint = 1024, flags:int = 0 ):ByteArray
+}}}
+Receive all of a binary message from a connected socket.
+
+*note:*<br>
+Calls the `onReceiveAll()` function (see [#Callbacks Callbacks] section).<br>
+<br>
+The method loop till all the fragments are received.
+
+*since:* 0.3.0
+
+
+== receiveFrom ==
+{{{
+public function receiveFrom( buffer:uint = 512, flags:int = 0 ):String
+}}}
+Receive a string message from a socket.
+
+*note:*<br>
+Calls the `onReceive()` function (see [#Callbacks Callbacks] section).<br>
+<br>
+Receive as much data as the `buffer` allows.
+
+*since:* 0.3.0
+
+
+== receiveBinaryFrom ==
+{{{
+public function receiveBinaryFrom( buffer:uint = 512, flags:int = 0 ):ByteArray
+}}}
+Receive a binary message from a socket.
+
+*note:*<br>
+Calls the `onReceive()` function (see [#Callbacks Callbacks] section).<br>
+<br>
+Receive as much data as the `buffer` allows.
+
+*since:* 0.3.0
+
 
 ----
 = Callbacks =
