--- a/wiki/Socket.wiki
+++ b/wiki/Socket.wiki
@@ -405,9 +405,10 @@ Internally we loop trough the `data.length` to be sure the full data is sent, li
 
 *supported flags:* (send/sendBinary/sendTo/sendBinaryTo)
 || *Flags* || *Description* || *POSIX* || *WIN32* ||
-|| MSG_DONTROUTE || [http://code.google.com/p/redtamarin/wiki/C_socket#Socket_messages C.socket.MSG_DONTROUTE] || yes || yes ||
-|| MSG_DONTWAIT || [http://code.google.com/p/redtamarin/wiki/C_socket#Socket_messages C.socket.MSG_DONTWAIT] || yes || <font color="red">no</font><br> ||
-|| MSG_OOB || [http://code.google.com/p/redtamarin/wiki/C_socket#Socket_messages C.socket.MSG_OOB] || yes || yes ||
+|| MSG_DONTROUTE || Send without using routing tables || yes || yes ||
+|| MSG_DONTWAIT || Enables non-blocking operation || yes || <font color="red">no</font><br> ||
+|| MSG_OOB || Out-of-band data || yes || yes ||
+see [http://code.google.com/p/redtamarin/wiki/C_socket#Socket_messages Socket messages] in C.socket
 
 *since:* 0.3.0
 
@@ -467,7 +468,16 @@ Receive part of a string message from a connected socket.
 *note:*<br>
 Calls the `onReceive()` function (see [#Callbacks Callbacks] section).<br>
 <br>
-The data is received fragmented by the size of the `buffer`.
+The data is received fragmented by the size of the `buffer`.<br>
+<br>
+
+*supported flags:* (receive/receiveAll/receiveBinary/receiveBinaryAll/receiveFrom/receiveBinaryFrom)
+|| *Flags* || *Description* || *POSIX* || *WIN32* ||
+|| MSG_DONTWAIT || Enables non-blocking operation || yes || <font color="red">no</font> ||
+|| MSG_OOB || Out-of-band data || yes || yes ||
+|| MSG_PEEK || Leave received data in queue || yes || yes ||
+|| MSG_WAITALL || Attempt to fill the read buffer || yes || <font color="red">no</font> ||
+see [http://code.google.com/p/redtamarin/wiki/C_socket#Socket_messages Socket messages] in C.socket
 
 *since:* 0.3.0
 
