Edited wiki page TOC through web user interface.

--- a/wiki/TOC.wiki
+++ b/wiki/TOC.wiki
@@ -1,6 +1,7 @@
   * [Main ↑ Home]
   * [Users Working with redtamarin]
     * [GettingStarted Getting Started]
+    * [GettingStarted_0_2_5 Getting Started 0.2.5]
     * [IDE HOWTO Setup your IDE]
   * [Coders Programming redtamarin]
     * [Organization Organization]
